remove snowball from the workspace for the time being

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["clique-db", "clique-collector", "clique-api", "snowball"]
+members = ["clique-db", "clique-collector", "clique-api"]
