--- a/.github/workflows/binaries.yaml
+++ b/.github/workflows/binaries.yaml
@@ -41,10 +41,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        profile: minimal
-        toolchain: stable
+      uses: dtolnay/rust-toolchain@stable
 
     - name: Build
       run: cargo build --release --locked
