--- a/.github/workflows/binaries.yaml
+++ b/.github/workflows/binaries.yaml
@@ -48,8 +48,16 @@ jobs:
     - name: Set up Rust
       uses: dtolnay/rust-toolchain@stable
 
+    - name: Run sccache-cache
+      uses: mozilla-actions/sccache-action@v0.0.2
+      with:
+        version: "v0.4.0-pre.9"
+
     - name: Build
       run: cargo build --release --locked
+      env:
+        SCCACHE_GHA_ENABLED: "true"
+        RUSTC_WRAPPER: "sccache"
 
     - name: Upload binaries to release
       env:
