--- a/.github/workflows/binaries.yaml
+++ b/.github/workflows/binaries.yaml
@@ -6,12 +6,18 @@ jobs:
   draft-release:
     name: Create draft release
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.tag.outputs.tag }}
     steps:
+    - name: Generate tag name
+      run: echo "tag=$(date +nightly%Y-%m-%dT%H-%M-%S)" >> $GITHUB_OUTPUT
+      id: tag
+
     - name: Create release
       env:
         GH_TOKEN: ${{ github.token }}
         GH_REPO: ${{ github.repository }}
-      run: gh release create --draft "${{ github.event.repository.updated_at }}" --title "Build at ${{ github.event.repository.updated_at }}"
+      run: gh release create --draft "${{ steps.tag.output.tag }}" --title "Build at $(date)"
 
   build:
     name: Build for ${{ matrix.os }}
@@ -66,16 +72,16 @@ jobs:
       run: |
         mv ${{ matrix.collector-artifact }} ${{ matrix.collector-name }}
         mv ${{ matrix.api-artifact }} ${{ matrix.api-name }}
-        gh release upload "${{ github.event.repository.updated_at }}" ${{ matrix.collector-name }} ${{ matrix.api-name }}
+        gh release upload "${{ needs.draft-release.outputs.tag }}" ${{ matrix.collector-name }} ${{ matrix.api-name }}
 
   publish:
     name: Publish release with binaries
     runs-on: ubuntu-latest
-    needs: build
+    needs: [draft-release, build]
 
     steps:
     - name: Publish release
       env:
         GH_TOKEN: ${{ github.token }}
         GH_REPO: ${{ github.repository }}
-      run: gh release edit --draft=false "${{ github.event.repository.updated_at }}"
+      run: gh release edit --draft=false "${{ needs.draft-release.outputs.tag }}"
